# NtrLang

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.ntr
src/: ast.h  compiler.cpp  compiler.h  env.cpp  env.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h  utils.cpp  utils.h
